# leftright-gaze-estimator-demo

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
app/: CMakeLists.txt
app/config/: leftrightestimator_conf.ini  yarpOpenpose.ini
app/scripts/: leftright-estimator-localhost.xml
src/: CMakeLists.txt  leftright-estimator.py  leftright-estimator.py.in  train.py
src/functions/: leftright_model_calibrated_svm.pkl  utilities.py
